--- a/index.html
+++ b/index.html
@@ -3,9 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="/assets/css/style.css">
+    
     <title>Janet's Word Guess Game</title>
 </head>
 <body>
-    
+    <header>
+        <div class="jumbotron text-center">
+            <h1>Janet's Word Guess Game</h1>
+            <h2>Guess some of my favorite words!</h2>
+            <button class="start-button">Start</button>
+        </div>
+    </header>
+    <main>
+        <section>
+            <div class="card word-guess">
+                <div class="jumbotron word-blanks">J _ v _ S c r_ _t</div>
+            </div>
+        </section>
+        <section>
+            <div class="card result">
+                <div class="win-loss-container">
+                    <div>
+                        <h3>Wins: <span class="win">0 </span></h3>
+                        <h3>Losses: <span class="lose">0 </span></h3>
+                    </div>
+                    <button class="reset-button">Reset Score</button>
+                </div>
+                <div class="card timer">
+                    <div class="timer-text">
+                        <div class="jumbotron timer-count">10</div>
+                        <h4>seconds remaining</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
