--- a/index.html
+++ b/index.html
@@ -9,38 +9,47 @@
     
     <title>Janet's Word Guess Game</title>
 </head>
-<body>
+<body class="bg-secondary">
     <header>
-        <div class="jumbotron text-center">
+        <div class="jumbotron text-center p-3 bg-info">
             <h1>Janet's Word Guess Game</h1>
-            <h2>Guess some of my favorite words!</h2>
-            <button class="start-button">Start</button>
+            <p>Guess some of my favorite words!</p>
+            <button class="start-button btn btn-outline-dark">Start</button>
         </div>
     </header>
     <main>
         <section>
-            <div class="card word-guess">
-                <div class="jumbotron word-blanks">J _ v _ S c r_ _t</div>
+            <div class="card word-guess text-center p-3 m-2 bg-primary text-white">
+                <div class="h1 word-blanks">J _ v _ S c r_ _t</div>
             </div>
         </section>
         <section>
-            <div class="card result">
+            <div class="card result text-center bg-info m-3">
                 <div class="win-loss-container">
                     <div>
                         <h3>Wins: <span class="win">0 </span></h3>
                         <h3>Losses: <span class="lose">0 </span></h3>
                     </div>
-                    <button class="reset-button">Reset Score</button>
+                    <button class="reset-button btn btn-outline-dark">Reset Score</button>
                 </div>
-                <div class="card timer">
+                <div class="card timer bg-warning m-5">
                     <div class="timer-text">
-                        <div class="jumbotron timer-count">10</div>
-                        <h4>seconds remaining</h4>
+                        <div class="jumbotron timer-count pt-3">60</div>
+                        <p>seconds remaining</p>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+    <footer>
+        <div class="card text-center p-3 m-2 bg-secondary text-white">
+            <div class="card-body">
+                <h5 class="card-title">Janet's Word Guess Game</h5>
+                <p class="card-text">A simple word guessing game using JavaScript, Boostrap CSS, and HTML.</p>
+                <p class="bg-light"><a href="https://github.com/TwixmixyJanet/word-guess-game">GitHub Repo</a></p>
+            </div>
+        </div>
+    </footer>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
